--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selectores de Atributo</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="./img/css.jpg">
 </head>
 <body>  
 <h1 >Software para Desarrollo Web</h1></a>
